Mejoras a la interfaz

--- a/src/cr/ac/una/ingenieria/appMVC/Vista/MantBusarTipoArticulo.form
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/MantBusarTipoArticulo.form
@@ -10,7 +10,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="BUSCAR TIPO ARTICULO"/>
+    <Property name="title" type="java.lang.String" value="Buscar Tipos de Articulos"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
